<resources>
    <string name="app_name">QR Scan</string>
    <string name="gallery">Gallery</string>
    <string name="create">Create</string>
    <string name="contact">Contact</string>
    <string name="name">Name</string>
    <string name="organization">Organization</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="notes">Notes</string>
    <string name="loading">Loading…</string>
    <string name="subject">Subject</string>
    <string name="body">Body</string>
    <string name="geo">Geo</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="query">Query</string>
    <string name="phone">Phone</string>
    <string name="create_qr">Create QR</string>
    <string name="other">Other</string>
    <string name="sms">SMS</string>
    <string name="message">Message</string>
    <string name="text">Text</string>
    <string name="url">URL</string>
    <string name="http">http://</string>
    <string name="wifi">Wifi</string>
    <string name="ssid_network_name">SSID/Network name</string>
    <string name="password">Password</string>
    <string name="wpa_wpa2">WPA/WPA2</string>
    <string name="hidden">Hidden</string>
    <string name="favourite">Favourite</string>
    <string name="history">History</string>
    <string name="flash">Flash</string>
    <string name="m_switch">Switch</string>
    <string name="setting">Setting</string>
    <string name="beep">Beep</string>
    <string name="copy">Copy</string>
    <string name="use_auto_focus">Use auto focus</string>
    <string name="barcode">Barcode</string>
    <string name="send_sms">Send sms</string>
    <string name="send_email">Send email</string>
    <string name="connect_wifi">Connect wifi</string>
    <string name="open_web">Open web</string>
    <string name="add_contact">Add contact</string>
    <string name="search_in_browse">Search in browse</string>
    <string name="save">Save</string>
    <string name="scanning">Scanning</string>
    <string name="calendar">Calendar</string>
    <string name="add_to_fav">Added to favourite</string>
    <string name="removed_fav">Removed from favourite</string>
    <string name="save_qr_to">\"Save QR to \"</string>
    <string name="prepairing">Preparing...</string>
    <string name="unknow_error">Unknown error</string>
    <string name="no_email_client">There are no email clients installed.</string>
    <string name="no_browse">No browsers found</string>
    <string name="copy_in_boardcast">Copied in clipboard!</string>
    <string name="wiffi_error">Wi-Fi protocol error</string>
    <string name="connecting">Connecting...</string>
    <string name="thankyou">Thank you for yout reviewing</string>
    <string name="language">Language</string>
    <string name="open_url_automatic">Open URL automatic</string>
    <string name="this_action_can_contain_ads">This action can contain ads...</string>
    <string name="share">Share</string>
    <string name="scan">Scan</string>
    <string name="scan_image">Scan Image</string>
    <string name="create_qr_code">Create QRCode</string>
    <string name="txt_favourite">Favourite</string>
    <string name="rate">Rate</string>
    <string name="saved_qr">Saved QR</string>
    <string name="not_support">Scanner is not permission or not approve in this device.</string>
    <string name="result">Result</string>
    <string name="call">Call</string>
</resources>