<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            style="@style/LinearStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.superqrcode.scan.view.widget.CustomEditText
                android:id="@+id/edt_name"
                style="@style/EditStyle"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:inputType="text"
                android:singleLine="true" />

            <com.superqrcode.scan.view.widget.CustomEditText
                android:id="@+id/edt_oran"
                style="@style/EditStyle"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:hint="@string/organization"
                android:singleLine="true" />

            <com.superqrcode.scan.view.widget.CustomEditText
                android:id="@+id/edt_add"
                style="@style/EditStyle"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:singleLine="true" />

            <com.superqrcode.scan.view.widget.CustomEditText
                android:id="@+id/edt_phone"
                style="@style/EditStyle"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="12"
                android:singleLine="true" />

            <com.superqrcode.scan.view.widget.CustomEditText
                android:id="@+id/edt_email"
                style="@style/EditStyle"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <com.superqrcode.scan.view.widget.CustomEditText
                android:id="@+id/edt_note"
                style="@style/EditStyle"
                android:layout_height="150dp"
                android:hint="@string/notes" />
            <include
                android:id="@+id/create"
                layout="@layout/button_create" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
