<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="200dp"  app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            style="@style/LinearStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.superqrcode.scan.view.widget.CustomEditText
                android:id="@+id/edt_lat"
                style="@style/EditStyle"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:hint="@string/latitude"
                android:inputType="numberDecimal" />

            <com.superqrcode.scan.view.widget.CustomEditText
                android:id="@+id/edt_long"
                style="@style/EditStyle"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:hint="@string/longitude"
                android:inputType="numberDecimal" />

            <com.superqrcode.scan.view.widget.CustomEditText
                android:id="@+id/edt_query"
                style="@style/EditStyle"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:hint="@string/query" />

            <include
                android:id="@+id/create"
                layout="@layout/button_create" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
