<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            style="@style/LinearStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.superqrcode.scan.view.widget.CustomEditText
                android:id="@+id/edt_ssid"
                style="@style/EditStyle"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:hint="@string/ssid_network_name"
                android:textColorHint="#E5E5E5" />

            <com.superqrcode.scan.view.widget.CustomEditText
                android:id="@+id/edt_password"
                style="@style/EditStyle"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:textColorHint="#E5E5E5" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_wifi_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/wpa_wpa2"
                    android:textColor="#000"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_dropdown"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="16dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:padding="2dp"
                    android:src="@drawable/ic_drop_down"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_hidden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/hidden" />

            <include
                android:id="@+id/create"
                layout="@layout/button_create" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
